# cinema-api

./: .env  .flake8  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
etl/: client.py  pipeline.py
etl/dumps/: genres_dump.json  movies_dump.json  persons_dump.json
etl/schemas/: movies_index_schema.json
src/: main.py
src/api/v1/: films.py  genres.py  persons.py
src/cache/: cache_manager.py
src/cache/managers/: base.py  redis.py
src/cache/serializers/: base.py  json.py
src/constants/: elastic.py
src/core/: config.py
src/dependencies/: base.py  film.py  genre.py  person.py
src/exceptions/: genre.py  person.py
src/models/: base.py  film.py  genre.py  person.py
src/repositories/film/: base.py  elastic.py
src/repositories/genre/: base.py  elastic.py
src/repositories/person/: base.py  elastic.py
src/serializers/films/: base.py  elastic.py
src/serializers/genre/: base.py  elastic.py
src/serializers/person/: base.py  elastic.py
src/services/: film.py  genre.py  person.py
tests/functional/: conftest.py  docker-compose.yaml  settings.py
tests/functional/data/: films.json  genres.json  persons.json
tests/functional/fixtures/: elastic.py  http.py  redis.py
tests/functional/src/: test_film.py  test_genres.py  test_person.py
tests/functional/utils/: generator.py  waiters.py
